--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,54 +3,36 @@
 <body>
   <!-- Main Content -->
   <main class="container">
-    <div
-      id="carouselExampleInterval"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-interval="10000">
-          <img
-            src="https://i.imgur.com/RE6fi8d.png"
-            class="d-flex w-25"
-            alt="..."
-          />
-        </div>
-        <div class="carousel-item" data-interval="2000">
-          <img
-            src="https://i.imgur.com/lgHSr9l.png"
-            class="d-flex w-25"
-            alt="..."
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            src="https://i.imgur.com/QXkgSvR.png"
-            class="d-flex w-25"
-            alt="..."
-          />
+    <h1>Welcome to the <%= title %> page</h1>
+    <!-- About Me Part-->
+    <section class="about">
+      <div class="contentBx">
+        <h2 class="heading">Who am I</h2>
+        <div class="sidebyside">
+          <div class="side">
+            <p class="text"></p>
+          </div>
+          <div class="side">
+            <img
+              src="./Assets/images/mypic.png"
+              width="400"
+              height="400"
+              class="img-fluid"
+              alt="Responsive image"
+            />
+          </div>
         </div>
       </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleInterval"
-        role="button"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleInterval"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-    <h1>Welcome to the <%= title %> page</h1>
+
+      <div class="imgBx">
+        <img
+          src="https://i.imgur.com/0wo5QLW.png"
+          class="img-fluid"
+          alt="Responsive image"
+        />
+      </div>
+    </section>
+    >
   </main>
 
   <%- include partials/bottom_nav.ejs %> <%- include partials/footer.ejs %>
