--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include partials/header.ejs %> <%- include partials/main_nav.ejs %>
 
   <!-- Main Content -->
-  <main class="container">
+  <main class="background">
     <h1>Welcome to the <%= title %> page</h1>
     <!-- About Me Part-->
     <section class="about">
@@ -23,12 +23,13 @@
         </div>
       </div>
 
-      <div class="imgBx">
+      <div > 
+        <div class="imgBx">
         <img
           src="https://i.imgur.com/0wo5QLW.png"
           class="img-fluid"
           alt="Responsive image"
-        />
+        /></div>
       </div>
     </section>
     >
