--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,6 +8,24 @@
   </div>
 </div>
 
+<div class="contentBx">
+        <h2 class="heading">Who am I</h2>
+        <div class="sidebyside">
+          <div class="side">
+            <p class="text"></p>
+          </div>
+          <div class="side">
+            <img
+              src="./Assets/images/mypic.png"
+              width="400"
+              height="400"
+              class="img-fluid"
+              alt="Responsive image"
+            />
+          </div>
+        </div>
+      </div>
+
 </main>
 
 <%- include partials/bottom_nav.ejs %> <%- include partials/footer.ejs %>
