--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     
     <!-- Image with url section -->
     <section>
-      <div><h3 class="home">My goal is to always <br> give my clients a fun <br> experience that always deliver  <br> the right message </h1> </div>
+      
       <div>
         <img
           src="https://i.imgur.com/0wo5QLW.png"
@@ -14,12 +14,22 @@
           alt="A door to another universe with fog comming out of it  "
           onclick="enterVoid()"
         />
-          <script>
-          function enterVoid() {
-          window.location.href = "/about";
-          }
-          </script>
       </div>
+
+      <div class="column">
+        <div>
+          <h4 class="home">My goal is to provide <br> unique and fun medias <br> that deliver the right message <br> to your customers. </h4> 
+        </div>
+
+        <div>
+          <h4 class="pink">So click on the door <br> to know a little more <br> about me and my work so far </h4> 
+        </div>
+      </div>
+
+      <script>
+          function enterVoid() {window.location.href = "/about";}
+      </script>
+      
     </section>
 </main>
 
