--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,30 +1,42 @@
 <%- include partials/header.ejs %> <%- include partials/main_nav.ejs %>
 
-<div class="media">
-  <img src="..." class="mr-3" alt="...">
-  <div class="media-body">
-    <h5 class="mt-0">Media heading</h5>
-    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-  </div>
-</div>
+  <section id="aboutMe">
 
-<div class="contentBx">
-        <h2 class="heading">Who am I</h2>
-        <div class="sidebyside">
-          <div class="side">
-            <p class="text"></p>
-          </div>
-          <div class="side">
-            <img
-              src="./Assets/images/mypic.png"
-              width="400"
-              height="400"
-              class="img-fluid"
-              alt="Responsive image"
-            />
-          </div>
+    <div class="media">
+      <div class="media-body">
+          <h5 class="mt-0">Who am I?</h5>
+          Hi there, my name Thiago Batista<br>. I'm a media designer from Brazil living currently in Toronto. 
         </div>
-      </div>
+      <img src="https://i.imgur.com/x5WXvrY.png" class="mr-3" alt="Picture of Thiago while chilling">      
+    </div>
+
+    <div class="aboutMe">
+      <ul class="list-unstyled">
+        <li class="media">
+          <img src="..." class="mr-3" alt="...">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">List-based media object</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+        </li>
+        <li class="media my-4">
+          <img src="..." class="mr-3" alt="...">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">List-based media object</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+        </li>
+        <li class="media">
+          <img src="..." class="mr-3" alt="...">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">List-based media object</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+        </li>
+      </ul>
+    </div>
+    
+  </section>
 
 </main>
 
