--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,10 +2,10 @@
 
   <!-- Main Message -->
   <main class="background">
-    <h1 class="home">Thiago's Portfolio <%= title %> page</h1>
+    <h1 class="welcome">Thiago's Portfolio <%= title %> page</h1>
     
     <!-- Image with url section -->
-    <section>
+    <section id="home">
       
       <div>
         <img
@@ -18,7 +18,7 @@
 
       <div class="column">
         <div>
-          <h4 class="home">My goal is to provide <br> unique and fun medias <br> that deliver the right message <br> to your customers. </h4> 
+          <h4 class="white">My goal is to provide <br> unique and fun medias <br> that deliver the right message <br> to your customers. </h4> 
         </div>
 
         <div>
