--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,33 +4,51 @@
 
     <div class="media">
       <div class="media-body">
+        <img src="https://i.imgur.com/x5WXvrY.png" class="mr-3" alt="Picture of Thiago while chilling">
+      </div>
+    </div>
+
+    <div class="media-body1"></div>
+
+    <div class="media-body">
           <h5 class="mt-0">Who am I?</h5>
-          Hi there, my name Thiago Batista<br>. I'm a media designer from Brazil living currently in Toronto. 
-        </div>
-      <img src="https://i.imgur.com/x5WXvrY.png" class="mr-3" alt="Picture of Thiago while chilling">      
+          Hi there, my name Thiago Batista.<br> I'm a media designer from Brazil living currently in Toronto.<br> Passionate about creativity in all it's forms.<br> Here are some of the things that inspire me during my creative process.
     </div>
 
     <div class="aboutMe">
+
       <ul class="list-unstyled">
+
         <li class="media">
-<i class="fas fa-dice-d20"></i>          <div class="media-body">
-            <h5 class="mt-0 mb-1"> List-based media object</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+         <div class="media-body">
+            <h5 class="mt-0 mb-1"> Fantasy Worlds</h5> <i class="fas fa-dice-d20"></i> 
+            I grew up reading books about fantasy worlds. From Tolkien's the lord of the rings to Tracy Hickman's Dragon Lance saga, these medieval-style world has always been my passion. This is why I have been a rpg player and Dungeon-Master for over 20 years.
           </div>
         </li>
+
         <li class="media my-4">
-<i class="fas fa-gamepad"></i>          <div class="media-body">
-            <h5 class="mt-0 mb-1"> List-based media object</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+        <div class="media-body">
+            <h5 class="mt-0 mb-1"> Video-games</h5> <i class="fas fa-gamepad"></i>  
+            Video games have always been present in my life. From Atari to virtual reality games, I have always been passionate about narrative and the worlds that were created for our immersion.
           </div>
         </li>
+
+        <li class="media my-4">
+         <div class="media-body">
+            <h5 class="mt-0 mb-1"> Sports</h5> <i class="fas fa-futbol"></i>
+            I grew up in a sports family, and I was always encouraged to be part of a team sport. Sports, in addition to shaping your character, help you understand the meaning of effort, reward, and overcoming.
+          </div>
+        </li>
+
         <li class="media">
-<i class="fas fa-spider"></i>          <div class="media-body">
-            <h5 class="mt-0 mb-1"> List-based media object</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          <div class="media-body">
+            <h5 class="mt-0 mb-1"> Super-Heroes</h5> <i class="fas fa-spider"></i>
+            From comics to movies and series, the universe of superheroes has always been my fascination. Not strangely, it is the combination of all the qualities described above (fantasy, immersion, overcoming) compressed in a single medium.
           </div>
         </li>
+
       </ul>
+      
     </div>
     
   </section>
