--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -78,16 +78,13 @@
     background-size: 40%;
     background-repeat: no-repeat;
   }
-
   #mountains {  
     background-image: url("https://i.imgur.com/CGDOrI9.gif");
   }
-
   .dragon {
     padding-left: 5%;
     width: 40%;
   }
-
   .media{
     padding-left: 5%;
   }
@@ -97,13 +94,47 @@
   .media-body1 {
     min-width: 180px;
   }
-
   .mt-0 {
     color:red;
-  }
-  
+  }  
   .mr-3 {
     max-height: 550px; 
     max-width: 390px;
 
+  }
+  @media (max-width: 700px) {
+
+    section {
+      max-height: 750px;
+      display: flex;
+      flex-direction: column;
+    }
+
+    #aboutMe {
+      margin-top: 2%;
+      margin-left: 5%;
+      padding-right: 10px;
+    }
+
+    .media-body {
+      min-width: 0px;
+    }
+
+    .mr-3 {
+      margin-top: 45%;
+      max-height: 350px;
+      max-width: 190px;
+    }
+  }
+
+  /* CSS for Contact Page */
+  #contact{
+    padding-left: 250px;
+    padding-right: 150px;
+  }
+  @media (max-width: 700px) {
+    #contact {
+      padding-left: 25px;
+      padding-right: 15px;
+    }
   }
