--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,73 +1,113 @@
 <%- include partials/header.ejs %> <%- include partials/main_nav.ejs %>
 
-<div class="container">
-      <h1 class="display-4">Please contact us if you have any questions</h1>
-      <div id="errorMessage" class="alert alert-danger" role="alert" hidden>
 
-      </div>
+<section id="contact">
+
+<div class="media-body">
+  <address>
+    <strong>Where to find me</strong><br />
+    Toronto, ON <br />
+  </address>
+
+  <address>
+    <strong>My E-mail</strong><br />
+    <a href="mailto:thiagoluizb@hotmail.com">thiagoluizb@hotmail.com</a>
+  </address>
+
+</div>
+
+
+    </div>
+
+<div class="container">
+
+  <div>
+      <h1 class="display-4">Please contact us if you have any questions</h1>
+        <div id="errorMessage" class="alert alert-danger" role="alert" hidden>
+        </div>
+
       <hr>
-      <form id="contactUsForm">
-      <form>
+
+    <form id="contactUsForm">
+      
       <div class="form-group">
         <div class="row">
+
           <div class="col">
             <label for="firstName">First Name</label>
             <input type="text" class="form-control" id="firstName" name="firstName" aria-describedby="firstName"
             placeholder="Enter your First Name Here" required autofocus>
           </div>
+
           <div class="col">
             <label for="lastName">Last Name</label>
             <input type="text" class="form-control" id="lastName" name="lastName" aria-describedby="lastName"
             placeholder="Enter your Last Name Here" required>
           </div>
-        </div>
-        </div>
 
-        <div class="form-group">
-          <div class="row">
-            <div class="col">
-              <label for="contactNumber">Contact Number</label>
-              <input type="tel" class="form-control" id="contactNumber" name="contactNumber"
-              aria-describedby="contactNumber" placeholder="Enter your Contact Number" required>
-            </div>
-            <div class="col">
-              <label for="emailAddress">Email address</label>
-              <input type="email" class="form-control" id="emailAddress" name="emailAddress" aria-describedby="emailAddress"
-                placeholder="Enter your Contact Number" required>
-            </div>
-          </div>  
         </div>
+      </div>
 
-        <div class="form-group">
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-            <label class="form-check-label" for="inlineCheckbox1">About me</label>
+      <div class="form-group">
+        <div class="row">
+
+          <div class="col">
+            <label for="contactNumber">Contact Number</label>
+            <input type="tel" class="form-control" id="contactNumber" name="contactNumber"
+            aria-describedby="contactNumber" placeholder="Enter your Contact Number" required>
           </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-            <label class="form-check-label" for="inlineCheckbox2">About Projects</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" >
-            <label class="form-check-label" for="inlineCheckbox3">About Marvel</label>
-          </div>
-        </div>    
 
-        <div class="form-group">
-          <label for="shortMessage">Type here your Message</label>
-          <textarea class="form-control" id="shortMessage" name="shortMessage" rows="3"
-            aria-describedby="shortMessage"></textarea>
+          <div class="col">
+            <label for="emailAddress">Email address</label>
+            <input type="email" class="form-control" id="emailAddress" name="emailAddress" aria-describedby="emailAddress"
+              placeholder="Enter your Contact Number" required>
+          </div>
+
+        </div>  
+      </div>
+
+      <div class="form-group">
+
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+          <label class="form-check-label" for="inlineCheckbox1">About me</label>
         </div>
 
-        <button id="submitButton" type="submit" class="btn btn-primary btn-lg" onClick="window.location='index.html';"><i class="fas fa-envelope-square"></i>
-          Send</button>
-        <button id="resetButton" type="reset" class="btn btn-warning btn-lg"><i class="fas fa-comment-slash"></i>
-          Reset</button>
-      </form>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+          <label class="form-check-label" for="inlineCheckbox2">About Projects</label>
+        </div>
 
-    </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" >
+          <label class="form-check-label" for="inlineCheckbox3">About Marvel</label>
+        </div>
 
-    </main>
+      </div>    
+
+      <div class="form-group">
+        <label for="shortMessage">Type here your Message</label>
+        <textarea class="form-control" id="shortMessage" name="shortMessage" rows="3"
+        aria-describedby="shortMessage"></textarea>
+      </div>
+
+      <button id="submitButton" type="submit" class="btn btn-primary btn-lg" onClick="backToStart()"><i class="fas fa-envelope-square"></i>
+        Send</button>
+      <button id="resetButton" type="reset" class="btn btn-warning btn-lg"><i class="fas fa-comment-slash"></i>
+        Reset</button>
+
+    </form>
+
+      <script>
+          function backToStart() {window.location.href = "/home";}
+      </script>
+
+  </div>
+  
+</div>
+
+</section>
+
 
   <%- include partials/bottom_nav.ejs %> <%- include partials/footer.ejs %>
 
