Internal Documentation done

--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,3 +1,11 @@
+/* 
+  COMP 229 - Web Application Development (SEC. 003)
+  Fall 2020 - Assignment 1
+  Thiago Luiz Batista - Student Number 301110966
+  Work completed on 09/10/2020
+  CSS Assignment 1 File
+*/
+
   /* Main css goes here */
   .navbar {
       align-items: center;
