--- a/views/about.ejs
+++ b/views/about.ejs
@@ -13,6 +13,10 @@
     <div class="media-body">
           <h5 class="mt-0">Who am I?</h5>
           Hi there, my name Thiago Batista.<br> I'm a media designer from Brazil living currently in Toronto.<br> Passionate about creativity in all it's forms.<br> Here are some of the things that inspire me during my creative process.
+          <p></p>
+          <p>Click on the image to download my Resume<p>  
+          <a href="/FilesThiagoLB resume..pdf" download><i class="fas fa-file-download"></i>
+          </a>
     </div>
 
     <div class="aboutMe">
