--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 
   <!-- Main Message -->
   <main class="background">
-    <h1 class="welcome">Thiago's Portfolio <%= title %> page</h1>
+    <h1 class="welcome">Thiago's Portfolio Page</h1>
     
     <!-- Image with url section -->
     <section id="home">
