projects page done

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,7 +14,7 @@
           <h5 class="mt-0">Who am I?</h5>
           Hi there, my name Thiago Batista.<br> I'm a media designer from Brazil living currently in Toronto.<br> Passionate about creativity in all it's forms.<br> Here are some of the things that inspire me during my creative process.
           <p></p>
-          <p>Click on the image to download my Resume<p>  
+          <p>Click on the image bellow to download my Resume<p>  
           <a href="/FilesThiagoLB resume..pdf" download><i class="fas fa-file-download"></i>
           </a>
     </div>
@@ -40,14 +40,14 @@
         <li class="media my-4">
          <div class="media-body">
             <h5 class="mt-0 mb-1"> Sports</h5> <i class="fas fa-futbol"></i>
-            I grew up in a sports family, and I was always encouraged to be part of a team sport. Sports, in addition to shaping your character, help you understand the meaning of effort, reward, and overcoming.
+            I grew up in a sports family, and I was always encouraged to be part of a sport team. Sports, in addition to shaping your character, help you understand the meaning of effort, reward, and overcoming.
           </div>
         </li>
 
         <li class="media">
           <div class="media-body">
             <h5 class="mt-0 mb-1"> Super-Heroes</h5> <i class="fas fa-spider"></i>
-            From comics to movies and series, the universe of superheroes has always been my fascination. Not strangely, it is the combination of all the qualities described above (fantasy, immersion, overcoming) compressed in a single medium.
+            From comics to movies and series, the universe of superheroes has always been my fascination. Not strangely, it is the combination of all the qualities described above (fantasy, immersion, overcoming) compressed in a single media.
           </div>
         </li>
 
