--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -2,7 +2,7 @@
 
   <!-- Main Content -->
   <main class="container">
-  <h1>Welcome to the <%= title %> page</h1>
+  <h1>Three <%= title %> that I'm really proud off</h1>
     <div
       id="carouselExampleInterval"
       class="carousel slide"
@@ -13,7 +13,7 @@
           <img
             src="https://i.imgur.com/RE6fi8d.png"
             class="d-flex w-100"
-            alt="..."
+            alt="A picture of my website about a coffee shop"
           />
         </div>
         
@@ -21,14 +21,14 @@
           <img
             src="https://i.imgur.com/lgHSr9l.png"
             class="d-flex w-100"
-            alt="..."
+            alt="A picture of the CSS only site that I made using Keanu Reave as the inspiration"
           />
         </div>
         <div class="carousel-item">
           <img
             src="https://i.imgur.com/QXkgSvR.png"
             class="d-flex w-100"
-            alt="..."
+            alt="A picture of the website that I created using a lot of cool effects"
           />
         </div>
       </div>
@@ -52,33 +52,39 @@
       </a>
     </div>
 <section class="services">
-<div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-      </div>
 
-      <h2 class="heading">Three Projects that I love to Follow</h2>
+<ul class="list-unstyled">
 
-      <div class="container">
-        <div class="servicesBx">
-          <div>
-            <img src="./Assets/images/CINECOM.png" width="350" height="200" alt="">
-            <p class="text1"></p>
-          </div>
-        </div>
-        <div class="servicesBx">
-          <div>
-            <img src="./Assets/images/CODICTS.png" width="350" height="200" alt="">
-            <p class="text2"></p>
-          </div>
-        </div>
-        <div class="servicesBx">
-          <div>
-            <img src="./Assets/images/TMP.png" width="350" height="200" alt="">
-            <p class="text3"></p>
-          </div>
-        </div>
-      </div>
+<li class="media">
+       <a href="https://codepen.io/ThiagoPsyBatista/pen/oNjyWmK" target="_blank">Link to 'Thiago Sandbox'</a>
+
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Thiago Sandbox</h5>
+Using what I learned form Centennial, plus FreeCode Camp and also some other inspirational works that I saw, I created this conceptual site just to showcase some skills.    </div>
+        <img src="https://i.imgur.com/riQL1iQ.gif" class="mr-3" alt="A gif showing the website that I created using a lot of cool effects">
+
+  </li>
+
+  <li class="media">
+    <img src="https://i.imgur.com/WNx7nGR.gif" class="mr-3" alt="A gif showing the CSS only site that I made using Keanu Reave as the inspiration">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Keanu Reeves Church</h5>
+      Started as a 24-hour challenge between students, just to practice what could we do after the first semester. But I got so involved on the project that I think I went too deep on my Keanu fandom.
+    </div>
+    <a href="https://codepen.io/ThiagoPsyBatista/full/NWGpYNY" target="_blank">Link to Keanu Reeves Church</a>
+  </li>
+
+  <li class="media my-4">
+    <a href="https://codepen.io/ThiagoPsyBatista/full/WNQZKev" target="_blank">Link to 'Just Plain Coffee'</a>
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Freecode Camp - Product  Landpage</h5>
+      Between the first and second semester on Centennial I did the FreecodeCamp Responsive Web Design Certification, and this was my favorite work while doing it. Mainly for the integration of Youtube and the full design of it.
+    </div>
+    <img src="https://i.imgur.com/FuelpqT.gif" class="mr-3" alt="A gif showing of my website about a coffee shop">
+  </li>
+
+  
+</ul>
     </section>
 
     
