--- a/views/services.ejs
+++ b/views/services.ejs
@@ -11,33 +11,33 @@
 
   <li class="media">
     <div class="media">
-  <img src="https://i.imgur.com/riQL1iQ.gif" class="align-self-center mr-3" alt="...">
+  <img src="https://i.imgur.com/riQL1iQ.gif" class="align-self-center mr-3" alt="A gif showing the website that I created using a lot of cool effects">
   <div class="media-body">
-    <h5 class="mt-0">Center-aligned media</h5>
-    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-    <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <h5 class="mt-0">Website Creation</h5>
+    <p>Whether it's a hot page, landing page, or a complete website, if your company doesn't have a website up yet, you're failing to reach thousands of new consumers every day.</p>
+    <p class="mb-0">I help you since the creation of the page concept, its creation, hosting, and maintenance. In this way, your biggest job will only be to help me dream.</p>
   </div>
 </div>
   </li>
 
   <li class="media my-4">
     <div class="media">
-  <img src="..." class="align-self-center mr-3" alt="...">
+  <img src="https://i.imgur.com/sW87UOj.gif" class="align-self-center mr-3" alt="A gif showing the Digital Catalog that I made for a Brazilian Truck Part Company">
   <div class="media-body">
-    <h5 class="mt-0">Center-aligned media</h5>
-    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-    <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <h5 class="mt-0">Digital Product Catalog</h5>
+    <p>Show your customers all your products in an interactive and fun way. You can implement this type of media on your website, or send it to customers so that they have access to the catalog in a simple and quick way.</p>
+    <p class="mb-0">From the draft of the project, we make, if necessary, photographs of the product, in addition to the creation and implementation of the virtual catalog to be used on your website, or email marketing.</p>
   </div>
 </div>
   </li>
 
   <li class="media">
     <div class="media">
-  <img src="..." class="align-self-center mr-3" alt="...">
+  <img src="https://i.imgur.com/4zJaVx9.gif" class="align-self-center mr-3" alt="A gif showing a whiteboard animations for a Small Telecom Consulting Operator ">
   <div class="media-body">
-    <h5 class="mt-0">Center-aligned media</h5>
-    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-    <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <h5 class="mt-0">Institutional Animation</h5>
+    <p>A picture is worth a thousand words, and a well-made animation is worth more than a 10-minute presentation. Innovate in the way you communicate with your customers or employees.</p>
+    <p class="mb-0">We take care of the creation of the project as a whole or fragmented, which may be the entire project or just the outline of the project, the animation, or narration of the video.</p>
   </div>
 </div>
   </li>
@@ -46,33 +46,33 @@
   </li>
   <li class="media">
     <div class="media">
-  <img src="..." class="align-self-center mr-3" alt="...">
+  <img src="https://i.imgur.com/0RsLAff.gif" class="align-self-center mr-3" alt="A Demo Intro created showcasing some skills ">
   <div class="media-body">
-    <h5 class="mt-0">Center-aligned media</h5>
-    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-    <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <h5 class="mt-0">Intro/Opening Creation</h5>
+    <p>Maybe you already have a channel on the internet and just want to translate the entire concept of the channel in 10 seconds, giving your customers or followers the most important message, who are you</p>
+    <p class="mb-0">We help you choose the best photos, or images to better translate the essence of your channel into a video of no more than 10 seconds.</p>
   </div>
   </li>
 
   </li>
   <li class="media">
     <div class="media">
-  <img src="..." class="align-self-center mr-3" alt="...">
+  <img src="https://i.imgur.com/9mkVtoM.gif" class="align-self-center mr-3" alt="Gif showing one opening video for a Youtube Channel">
   <div class="media-body">
-    <h5 class="mt-0">Center-aligned media</h5>
-    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-    <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <h5 class="mt-0">Youtube Channel Branding</h5>
+    <p>But if you’re just starting out, or don’t know how to improve the quality of your channel, no problem. We can also help you in creating the whole concept of your Channel. </p>
+    <p class="mb-0">From thumbnails, the sound vignette, lower thirds, and subscribe bottom. We will create everything so that you can focus your attention only on creating the videos.</p>
   </div>
   </li>
 
   </li>
   <li class="media">
     <div class="media">
-  <img src="..." class="align-self-center mr-3" alt="...">
+  <img src="https://i.imgur.com/W12ZMgC.gif" class="align-self-center mr-3" alt="Gid showing a small animation and the lower third for an Instagram Account">
   <div class="media-body">
-    <h5 class="mt-0">Center-aligned media</h5>
-    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-    <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <h5 class="mt-0">Video Edition</h5>
+    <p>And if you have an idea in your head, and a camera in your hand, but you also don't know the first thing about video edition, that's fine. Let us help you with that too.</p>
+    <p class="mb-0">We help you edit short videos (3 to 5 minutes), right videos for IGTV (7 to 10 minutes) as well as longer videos for you to monetize better on Youtube (more than 10 minutes).</p>
   </div>
   </li>
 
