--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -11,7 +11,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active" data-interval="2000">
           <img
-            src="https://i.imgur.com/RE6fi8d.png"
+            src="https://i.imgur.com/WeqEVyd.png"
             class="d-flex w-100"
             alt="A picture of my website about a coffee shop"
           />
@@ -19,14 +19,14 @@
         
         <div class="carousel-item" data-interval="2000">
           <img
-            src="https://i.imgur.com/lgHSr9l.png"
+            src="https://i.imgur.com/cZPs9W5.png"
             class="d-flex w-100"
             alt="A picture of the CSS only site that I made using Keanu Reave as the inspiration"
           />
         </div>
         <div class="carousel-item">
           <img
-            src="https://i.imgur.com/QXkgSvR.png"
+            src="https://i.imgur.com/5L5FLgd.png"
             class="d-flex w-100"
             alt="A picture of the website that I created using a lot of cool effects"
           />
