--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -66,6 +66,14 @@
             <% } %>
             <a class="nav-link" href="/contact"><i class="fas fa-lg fa-headset"></i> Contact me </a>
           </li>
+
+          <% if (title == "Business Contacts") { %>
+          <li class="nav-item active">
+            <% } else { %>
+          <li class="nav-item">
+            <% } %>
+            <a class="nav-link" href="/Business"><i class="fas fa-lg fa-user-tie"></i> B.Contacts </a>
+          </li>
          
       </div>
     </nav>
