--- a/views/content/add-contact.ejs
+++ b/views/content/add-contact.ejs
@@ -15,13 +15,13 @@
           <div class="col">
             <label for="contactLastName">Contact Last Name</label>
             <input type="text" class="form-control" id="contactLastName" aria-describedby="contactLastName"
-           required name="contactLastName" placeholder="Enter the contact last name">
+           required name="contactLastName" placeholder="Enter the contact LAST name">
           </div>
 
           <div class="col">
             <label for="contactFirstName">Contact First Name</label>
             <input type="text" class="form-control" id="contactFirstName" aria-describedby="contactFirstName"
-           required name="contactFirstName" placeholder="Enter the contact first name">
+           required name="contactFirstName" placeholder="Enter the contact FIRST name">
           </div>
 
         </div>
@@ -33,13 +33,13 @@
           <div class="col">
             <label for="contactNumber">Contact Number</label>
             <input type="tel" class="form-control" id="contactNumber" name="contactNumber"
-            aria-describedby="contactNumber" placeholder="Enter the contact's number" required>
+            aria-describedby="contactNumber" placeholder="Enter the contact NUMBER" required>
           </div>
 
           <div class="col">
             <label for="emailAddress">Email address</label>
             <input type="email" class="form-control" id="emailAddress" name="emailAddress" aria-describedby="emailAddress"
-              placeholder="Enter the contact's email address" required>
+              placeholder="Enter the contact's EMAIL address" required>
           </div>
 
         </div>  
@@ -47,7 +47,7 @@
 
       <button id="submitButton" type="submit" class="btn btn-primary btn-lg" onClick="backToStart()"><i class="fas fa-user-plus"></i>
         Add Contact</button>
-      <button id="resetButton" type="reset" class="btn btn-warning btn-lg"><i class="fas fa-comment-slash"></i>
+      <button id="resetButton" type="reset" class="btn btn-danger btn-lg"><i class="fas fa-fast-backward"></i>
         Reset</button>
 
     </form>
