--- a/views/content/business.ejs
+++ b/views/content/business.ejs
@@ -5,7 +5,7 @@
             <h1> <%= title %> </h1>
             <br>
 
-            <a href="/add-contact" class="btn btn-primary btn-lg"><i class="fas fa-user-plus"></i> Add new Business contact</a>
+            <a href="/Business/add" class="btn btn-primary btn-lg"><i class="fas fa-user-plus"></i> Add new Business contact</a>
             <hr>
 
                 <table class="table table-striped table-info table-bordered table-hover">
