Add button working

--- a/views/content/add-contact.ejs
+++ b/views/content/add-contact.ejs
@@ -47,13 +47,13 @@
 
       <button id="submitButton" type="submit" class="btn btn-primary btn-lg" onClick="backToStart()"><i class="fas fa-user-plus"></i>
         Add Contact</button>
-      <button id="resetButton" type="reset" class="btn btn-danger btn-lg"><i class="fas fa-fast-backward"></i>
-        Reset</button>
+      <button id="resetButton" type="reset" class="btn btn-danger btn-lg" onClick="backToStart()"><i class="fas fa-fast-backward"></i>
+        Go back</button>
 
     </form>
 
       <script>
-          function backToStart() {window.location.href = "/home";}
+          function backToStart() {window.location.href = "/Business";}
       </script>
 
   </div>
